# stromwart

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/configs/policies/: action_allowlist.yaml  live_event_guardrails.yaml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: f8b3fbdbf76a_initial_schema.py
backend/scripts/: debug_hypothesis.py  download_waterloo.py  export_openapi.py  generate_synthetic_data.py  prepare_waterloo.py  train_models.py  verify_demo_e2e.py  verify_multi_agent.py  verify_multi_agent_api.py  verify_rca_fixes.py
backend/src/stromwart/: app.py  core.py  database.py  errors.py
backend/src/stromwart/agents/: __init__.py  analyst.py  base.py  critic.py  detector.py  diagnostician.py  guardrails.py  mitigator.py  tools.py  verifier.py  workflow.py
backend/src/stromwart/api/: agents.py  audit.py  control.py  evals.py  live.py  modeling.py  modeling_forecast.py  providers.py  router.py  serializers.py  settings.py  simulation.py  telemetry.py
backend/src/stromwart/application/: container.py  (+3 more)
backend/tests/unit/: test_best_diagnosis.py  test_contracts.py  test_evidence_critic.py  test_modeling_forecast_api.py  test_monitoring_service.py  test_persistence.py  test_policy.py  test_proposal_approval.py  test_providers.py  test_rules.py  test_settings.py  test_settings_provider_test.py  test_settings_store.py  test_simulation_progress.py  test_simulation_telemetry.py  test_step_verifier.py  test_telemetry_hash.py  test_tracer_duration.py
(+147 files in other folders)
